[gd_scene load_steps=35 format=3 uid="uid://13jorje6jbmq"]

[ext_resource type="Script" path="res://scripts/artifacts_controller.gd" id="1_a50l3"]
[ext_resource type="Script" path="res://scripts/lighting/lighting_preset.gd" id="2_fwj16"]
[ext_resource type="Script" path="res://scripts/lighting/moving_light_controller.gd" id="3_ltsmd"]
[ext_resource type="PackedScene" uid="uid://cl6qk62t7vj7w" path="res://scenes/camera/Camera.tscn" id="4_5mp82"]
[ext_resource type="Script" path="res://scripts/dissappearing_plane.gd" id="5_lliab"]
[ext_resource type="Script" path="res://scripts/ui/cycle_artifacts_button.gd" id="6_nupv4"]
[ext_resource type="Script" path="res://scripts/ui/open_select_object_window_button.gd" id="7_hsklm"]
[ext_resource type="Script" path="res://scripts/ui/flashlight_toggle_button.gd" id="8_l0tmm"]
[ext_resource type="Script" path="res://scripts/ui/world_lighting_toggle_button.gd" id="9_a2asu"]
[ext_resource type="Script" path="res://scripts/ui/annotations_toggle_button.gd" id="10_hlexp"]
[ext_resource type="Script" path="res://scripts/ui/select_lighting_preset_option_ button.gd" id="11_7y8ja"]
[ext_resource type="Script" path="res://scripts/ui/screenshot_button.gd" id="13_s60f5"]
[ext_resource type="Script" path="res://scripts/ui/customize_lighting_button.gd" id="14_de1e1"]
[ext_resource type="Script" path="res://scripts/ui/select_artifact_window.gd" id="15_8kkvs"]
[ext_resource type="Script" path="res://scripts/ui/select_artifact_button.gd" id="16_vesk2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_whdku"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.168627)
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 16.0

[sub_resource type="Sky" id="Sky_vfwqk"]

[sub_resource type="Environment" id="Environment_7futl"]
background_mode = 1
background_color = Color(0.0509804, 0.0509804, 0.0509804, 1)
sky = SubResource("Sky_vfwqk")
sky_custom_fov = 1.0
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.0
fog_enabled = true
fog_light_color = Color(0.0509804, 0.0509804, 0.0509804, 1)
fog_density = 0.05

[sub_resource type="PlaneMesh" id="PlaneMesh_bfdjv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_skwcb"]
render_priority = -100
transparency = 1
depth_draw_mode = 1
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="InputEventKey" id="InputEventKey_klwue"]
device = -1
shift_pressed = true
keycode = 77
unicode = 77

[sub_resource type="Shortcut" id="Shortcut_qss7a"]
events = [SubResource("InputEventKey_klwue")]

[sub_resource type="InputEventKey" id="InputEventKey_gj1rb"]
device = -1
shift_pressed = true
keycode = 78
unicode = 78

[sub_resource type="Shortcut" id="Shortcut_rc08y"]
events = [SubResource("InputEventKey_gj1rb")]

[sub_resource type="SystemFont" id="SystemFont_gbd4e"]
font_names = PackedStringArray("Cascadia Code")

[sub_resource type="InputEventKey" id="InputEventKey_ytv0s"]
device = -1
shift_pressed = true
keycode = 66
unicode = 66

[sub_resource type="Shortcut" id="Shortcut_5853c"]
events = [SubResource("InputEventKey_ytv0s")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eq23d"]

[sub_resource type="InputEventKey" id="InputEventKey_0kej4"]
device = -1
shift_pressed = true
keycode = 70
unicode = 70

[sub_resource type="Shortcut" id="Shortcut_uddkm"]
events = [SubResource("InputEventKey_0kej4")]

[sub_resource type="InputEventKey" id="InputEventKey_awmku"]
device = -1
shift_pressed = true
keycode = 71
unicode = 71

[sub_resource type="Shortcut" id="Shortcut_m2pwi"]
events = [SubResource("InputEventKey_awmku")]

[sub_resource type="InputEventKey" id="InputEventKey_yx0yo"]
device = -1
shift_pressed = true
keycode = 73
unicode = 73

[sub_resource type="Shortcut" id="Shortcut_oup0k"]
events = [SubResource("InputEventKey_yx0yo")]

[node name="viewer_scene" type="Node3D"]

[node name="artifacts_controller" type="Node3D" parent="."]
script = ExtResource("1_a50l3")

[node name="Node3D2" type="Node3D" parent="artifacts_controller"]

[node name="Node3D" type="Node3D" parent="artifacts_controller"]

[node name="lighting_controller@lighting_preset_default" type="Node3D" parent="."]
script = ExtResource("2_fwj16")

[node name="lighting_controller@lighting_preset_default@main_light" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, 0.5, 0.5, -0.707107, 0.5, 0.5, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="lighting_controller@lighting_preset_default@backlight_1" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, -0.707107, -0.5, 0.5, 0, -0.707107, -0.707107, 0, 0, 0)

[node name="lighting_controller@lighting_preset_default@backlight_2" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.5, 0.5, -0.707107, 0.5, 0.5, 0.707107, 0.707107, -0.707107, -6.32203e-08, 0, 0, 0)

[node name="lighting_controller@lighting_preset_soft" type="Node3D" parent="."]
visible = false
script = ExtResource("2_fwj16")

[node name="lighting_controller@lighting_preset_soft@main_light" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, 0.5, 0.5, -0.707107, 0.5, 0.5, 0, -0.707107, 0.707107, 0, 0, 0)
light_energy = 0.25

[node name="lighting_controller@lighting_preset_soft@backlight_1" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, -0.707107, -0.5, 0.5, 0, -0.707107, -0.707107, 0, 0, 0)
light_energy = 0.05

[node name="lighting_controller@lighting_preset_soft@backlight_2" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.5, 0.5, -0.707107, 0.5, 0.5, 0.707107, 0.707107, -0.707107, -6.32203e-08, 0, 0, 0)
light_energy = 0.05

[node name="lighting_controller@lighting_preset_soft_2" type="Node3D" parent="."]
visible = false
script = ExtResource("2_fwj16")

[node name="lighting_controller@lighting_preset_soft_2@main_light" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, 0.5, 0.5, -0.707107, 0.5, 0.5, 0, -0.707107, 0.707107, 0, 0, 0)
light_color = Color(1, 0.937255, 0.858824, 1)
light_energy = 0.15

[node name="lighting_controller@lighting_preset_soft_2@backlight_1" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, -0.707107, -0.5, 0.5, 0, -0.707107, -0.707107, 0, 0, 0)
light_color = Color(1, 0.937255, 0.858824, 1)
light_energy = 0.05

[node name="lighting_controller@lighting_preset_soft_2@backlight_2" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.5, 0.5, -0.707107, 0.5, 0.5, 0.707107, 0.707107, -0.707107, -6.32203e-08, 0, 0, 0)
light_color = Color(1, 0.937255, 0.858824, 1)
light_energy = 0.05

[node name="lighting_controller@lighting_preset_warm" type="Node3D" parent="."]
visible = false
script = ExtResource("2_fwj16")

[node name="lighting_controller@lighting_preset_warm@main_light" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, 0.5, 0.5, -0.707107, 0.5, 0.5, 0, -0.707107, 0.707107, 0, 0, 0)
light_color = Color(1, 0.917647, 0.811765, 1)
light_energy = 0.75

[node name="lighting_controller@lighting_preset_warm@backlight_1" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, -0.707107, -0.5, 0.5, 0, -0.707107, -0.707107, 0, 0, 0)
light_color = Color(1, 0.917647, 0.811765, 1)
light_energy = 0.25

[node name="lighting_controller@lighting_preset_warm@backlight_2" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.5, 0.5, -0.707107, 0.5, 0.5, 0.707107, 0.707107, -0.707107, -6.32203e-08, 0, 0, 0)
light_color = Color(1, 0.917647, 0.811765, 1)
light_energy = 0.25

[node name="lighting_controller@lighting_preset_cool" type="Node3D" parent="."]
visible = false
script = ExtResource("2_fwj16")

[node name="lighting_controller@lighting_preset_cool@main_light" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, 0.5, 0.5, -0.707107, 0.5, 0.5, 0, -0.707107, 0.707107, 0, 0, 0)
light_color = Color(0.933333, 0.980392, 0.988235, 1)
light_energy = 0.75

[node name="lighting_controller@lighting_preset_cool@backlight_1" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, -0.707107, -0.5, 0.5, 0, -0.707107, -0.707107, 0, 0, 0)
light_color = Color(0.933333, 0.980392, 0.988235, 1)
light_energy = 0.25

[node name="lighting_controller@lighting_preset_cool@backlight_2" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.5, 0.5, -0.707107, 0.5, 0.5, 0.707107, 0.707107, -0.707107, -6.32203e-08, 0, 0, 0)
light_color = Color(0.933333, 0.980392, 0.988235, 1)
light_energy = 0.25

[node name="lighting_controller@lighting_preset_chromatic" type="Node3D" parent="."]
visible = false
script = ExtResource("2_fwj16")

[node name="lighting_controller@lighting_preset_chromatic@main_light" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, 0.5, 0.5, -0.707107, 0.5, 0.5, 0, -0.707107, 0.707107, 0, 0, 0)
light_color = Color(1, 0, 0, 1)
light_energy = 0.75

[node name="lighting_controller@lighting_preset_chromatic@backlight_1" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, -0.707107, -0.5, 0.5, 0, -0.707107, -0.707107, 0, 0, 0)
light_color = Color(0, 1, 0, 1)

[node name="lighting_controller@lighting_preset_chromatic@backlight_2" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.5, 0.5, -0.707107, 0.5, 0.5, 0.707107, 0.707107, -0.707107, -6.32203e-08, 0, 0, 0)
light_color = Color(0, 0, 0.988235, 1)

[node name="lighting_controller@lighting_preset_red_and_blue" type="Node3D" parent="."]
visible = false
script = ExtResource("2_fwj16")

[node name="lighting_controller@lighting_preset_red_and_blue@main_light" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, 0.5, 0.5, -0.707107, 0.5, 0.5, 0, -0.707107, 0.707107, 0, 0, 0)
light_color = Color(1, 0, 0, 1)
light_energy = 0.75

[node name="lighting_controller@lighting_preset_red_and_blue@backlight_1" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, -0.707107, -0.5, 0.5, 0, -0.707107, -0.707107, 0, 0, 0)
light_color = Color(0.572549, 0, 0.356863, 1)
light_energy = 0.5

[node name="lighting_controller@lighting_preset_red_and_blue@backlight_2" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.5, 0.5, -0.707107, 0.5, 0.5, 0.707107, 0.707107, -0.707107, -6.32203e-08, 0, 0, 0)
light_color = Color(0, 0, 0.988235, 1)

[node name="lighting_controller@lighting_preset_darkroom" type="Node3D" parent="."]
visible = false
script = ExtResource("2_fwj16")

[node name="lighting_controller@lighting_preset_darkroom@main_light" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, 0.5, 0.5, -0.707107, 0.5, 0.5, 0, -0.707107, 0.707107, 0, 0, 0)
light_color = Color(1, 0, 0, 1)
light_energy = 0.75

[node name="lighting_controller@lighting_preset_darkroom@backlight_1" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, -0.707107, -0.5, 0.5, 0, -0.707107, -0.707107, 0, 0, 0)
light_color = Color(1, 0.196078, 0.196078, 1)
light_energy = 0.2

[node name="lighting_controller@lighting_preset_darkroom@backlight_2" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.5, 0.5, -0.707107, 0.5, 0.5, 0.707107, 0.707107, -0.707107, -6.32203e-08, 0, 0, 0)
light_color = Color(0.196078, 0.196078, 0.196078, 1)
light_energy = 0.05

[node name="lighting_controller@lighting_preset_empty" type="Node3D" parent="."]
visible = false
script = ExtResource("2_fwj16")

[node name="moving_light_controller" type="Node3D" parent="."]
script = ExtResource("3_ltsmd")

[node name="CSGTorus3D" type="CSGTorus3D" parent="moving_light_controller"]
visible = false
inner_radius = 4.95
outer_radius = 5.0
sides = 64
ring_sides = 16
material = SubResource("StandardMaterial3D_whdku")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_7futl")

[node name="Camera" parent="." instance=ExtResource("4_5mp82")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2, 0)

[node name="world_plane" type="Node3D" parent="." node_paths=PackedStringArray("camera")]
visible = false
script = ExtResource("5_lliab")
camera = NodePath("../Camera")

[node name="CSGMesh3D" type="CSGMesh3D" parent="world_plane"]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 0, 0)
mesh = SubResource("PlaneMesh_bfdjv")
material = SubResource("StandardMaterial3D_skwcb")

[node name="ui_root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="next_object_button" type="Button" parent="ui_root"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.935
anchor_top = 0.884
anchor_right = 0.978
anchor_bottom = 0.961
offset_left = -0.120117
offset_top = 0.167969
offset_right = 0.343994
offset_bottom = 0.271973
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(25, 25)
tooltip_text = "View the next object"
shortcut = SubResource("Shortcut_qss7a")
text = "
"
expand_icon = true
script = ExtResource("6_nupv4")

[node name="previous_object_button" type="Button" parent="ui_root"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.87
anchor_top = 0.884
anchor_right = 0.913
anchor_bottom = 0.961
offset_left = -0.240051
offset_top = 0.167969
offset_right = 0.223999
offset_bottom = 0.271973
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(25, 25)
tooltip_text = "View the previous object"
shortcut = SubResource("Shortcut_rc08y")
icon_alignment = 1
expand_icon = true
script = ExtResource("6_nupv4")
move_forward = false

[node name="select_object_button" type="Button" parent="ui_root" node_paths=PackedStringArray("select_window")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.022
anchor_top = 0.039
anchor_right = 0.135
anchor_bottom = 0.1
offset_left = -0.344002
offset_top = -0.272001
offset_right = -0.520004
offset_bottom = 0.199997
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(65, 20)
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Select another object to view"
theme_override_fonts/font = SubResource("SystemFont_gbd4e")
shortcut = SubResource("Shortcut_5853c")
text = "Select Object"
script = ExtResource("7_hsklm")
select_window = NodePath("../../Window")

[node name="flashlight_toggle_button" type="Button" parent="ui_root"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.935
anchor_top = 0.039
anchor_right = 0.978
anchor_bottom = 0.116
offset_left = -0.120117
offset_top = -0.272001
offset_right = 0.343994
offset_bottom = -0.167999
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(25, 25)
tooltip_text = "Toggle flashlight on/off"
theme_override_styles/focus = SubResource("StyleBoxEmpty_eq23d")
shortcut = SubResource("Shortcut_uddkm")
expand_icon = true
script = ExtResource("8_l0tmm")

[node name="world_lighting_toggle_button" type="Button" parent="ui_root"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.87
anchor_top = 0.039
anchor_right = 0.913
anchor_bottom = 0.116
offset_left = -0.240051
offset_top = -0.272001
offset_right = 0.223999
offset_bottom = -0.167999
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Toggle world lighting modes"
shortcut = SubResource("Shortcut_m2pwi")
expand_icon = true
script = ExtResource("9_a2asu")

[node name="annotations_toggle_button" type="Button" parent="ui_root"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.718
anchor_top = 0.039
anchor_right = 0.761
anchor_bottom = 0.116
offset_left = -0.136169
offset_top = -0.272001
offset_right = 0.327942
offset_bottom = -0.167999
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(25, 25)
tooltip_text = "Toggle annotations on/off"
shortcut = SubResource("Shortcut_oup0k")
expand_icon = true
script = ExtResource("10_hlexp")

[node name="select_lighting_preset_option_ button" type="OptionButton" parent="ui_root"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.783
anchor_top = 0.039
anchor_right = 0.913
anchor_bottom = 0.116
offset_left = -0.0160522
offset_top = -0.272001
offset_right = 0.223999
offset_bottom = -0.167999
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(75, 25)
script = ExtResource("11_7y8ja")

[node name="screenshot_button" type="Button" parent="ui_root"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.653
anchor_top = 0.039
anchor_right = 0.696
anchor_bottom = 0.116
offset_left = -0.256042
offset_top = -0.272001
offset_right = 0.208069
offset_bottom = -0.167999
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(25, 25)
tooltip_text = "Toggle annotations on/off"
expand_icon = true
script = ExtResource("13_s60f5")

[node name="customize_lighting_button" type="Button" parent="ui_root"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.783
anchor_top = 0.154
anchor_right = 0.913
anchor_bottom = 0.231
offset_left = -0.0160522
offset_top = 0.207993
offset_right = 0.223999
offset_bottom = 0.311996
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(75, 25)
text = "Customize Lights"
script = ExtResource("14_de1e1")

[node name="Window" type="Window" parent="." node_paths=PackedStringArray("artifacts_controller")]
disable_3d = true
title = "Select Artifact"
position = Vector2i(432, 81)
size = Vector2i(288, 486)
visible = false
unresizable = true
transparent = true
popup_window = true
script = ExtResource("15_8kkvs")
artifacts_controller = NodePath("../artifacts_controller")
artifacts_controller_node_path = NodePath("../artifacts_controller")

[node name="ScrollContainer" type="ScrollContainer" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Window/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="select_artifact_button" type="Button" parent="Window/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("parent_window")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "DEMO TEXT
"
alignment = 0
script = ExtResource("16_vesk2")
parent_window = NodePath("../../..")

[connection signal="item_selected" from="ui_root/select_lighting_preset_option_ button" to="ui_root/select_lighting_preset_option_ button" method="_on_item_selected"]
[connection signal="close_requested" from="Window" to="Window" method="_on_close_requested"]
